# solarqt

./: CMakeLists.txt  alias.h  constant.h  derived_constant.h  discretize.cpp  discretize.h  global.h  insolation.cpp  insolation.h  line_chart.cpp  line_chart.h  macro.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  month.cpp  month.h  sol.cpp  solar.cpp  solar.h  solar.ui  thread.h
